Artık görevlere saat de eklenebiliyor.

--- a/src/app/components/create-task/create-task.component.html
+++ b/src/app/components/create-task/create-task.component.html
@@ -15,12 +15,27 @@
     </mat-card-content>
   </mat-card>
   <mat-form-field class="date-input">
-    <input [(ngModel)]="date" placeholder="Son tarih (AA/GG/YYYY)" matInput [matDatepicker]="myDatePicker" />
+    <input [min]="minDate" [(ngModel)]="date" placeholder="Son tarih (AA/GG/YYYY)" matInput
+      [matDatepicker]="myDatePicker" />
     <mat-datepicker-toggle [for]="myDatePicker" matSuffix></mat-datepicker-toggle>
     <mat-datepicker #myDatePicker></mat-datepicker>
   </mat-form-field>
+  <div class="time-input">
+    <mat-form-field>
+      <mat-label>Saat</mat-label>
+      <input [maxLength]="2" [(ngModel)]="hour" matInput required />
+      <mat-hint>(00-23)</mat-hint>
+    </mat-form-field>
+    <span>:</span>
+    <mat-form-field>
+      <mat-label>Dakika</mat-label>
+      <input [maxLength]="2" [(ngModel)]="minute" matInput required />
+      <mat-hint>(00-59)</mat-hint>
+    </mat-form-field>
+  </div>
   <div class="button-group">
     <button (click)="createTask()" mat-raised-button color="primary">Ekle</button>
     <button routerLink="/" mat-raised-button color="warn">İptal</button>
   </div>
 </div>
+{{hour}}:{{minute}}
