--- a/src/app/components/create-task/create-task.component.css
+++ b/src/app/components/create-task/create-task.component.css
@@ -11,33 +11,44 @@
   margin: 0.5rem;
 }
 
-.create-task-wrapper mat-card-subtitle{
+.create-task-wrapper mat-card-subtitle {
   text-align: center;
   border-bottom: 1px solid black;
   color: black;
   font-size: 1.5rem;
 }
 
-.create-task-wrapper .date-input{
+.create-task-wrapper .date-input {
   margin-top: 1rem;
 }
 
-.create-task-wrapper .button-group{
+.time-input {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.time-input mat-form-field {
+  margin: 1rem;
+  width: 70px;
+}
+
+.create-task-wrapper .button-group {
   display: flex;
   justify-content: center;
 }
 
-.button-group button{
+.button-group button {
   margin-left: 1rem;
 }
 
-.mat-display-1{
+.mat-display-1 {
   margin-bottom: 1rem;
 }
 
 @media(min-width: 600px) {
-  .create-task-wrapper{
+  .create-task-wrapper {
     height: calc(100vh - 100px);
   }
 }
-
