--- a/src/app/components/task/task.component.html
+++ b/src/app/components/task/task.component.html
@@ -3,7 +3,8 @@
     <mat-card-title>
       <p>{{task.task}}</p>
     </mat-card-title>
-    <mat-card-subtitle>{{task.deadline | date:'dd/MM/yyyy'}}</mat-card-subtitle>
+    <mat-card-subtitle>{{task.deadline | date:'dd/MM/yyyy HH:mm'}}</mat-card-subtitle>
+    <mat-card-subtitle *ngIf="!task.done">{{calculateRemaining(task.deadline)}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <mat-icon [matTooltip]="
@@ -22,5 +23,3 @@
     </button>
   </mat-action-row>
 </mat-card>
-
-{{task.deadline | date:'dd/MM/yyyy HH:mm'}}
