Görev arama fonksiyonu eklendi.

--- a/src/app/components/tasks/tasks.component.css
+++ b/src/app/components/tasks/tasks.component.css
@@ -5,6 +5,17 @@
   z-index: 2;
 }
 
+.search-task{
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-task mat-form-field {
+  margin: 0.5rem;
+}
+
 @media(min-width: 700px) {
   .mat-tab-group-container {
     width: 60%;
