--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,27 +1,53 @@
 <div class="mat-tab-group-container">
-  <mat-tab-group animationDuration="300ms" (selectedTabChange)="onToggleChange()" [(selectedIndex)]="toggleIndex" mat-align-tabs="center">
+
+  <div class="search-task">
+    <mat-form-field>
+      <mat-label>Görev arayın</mat-label>
+      <input [(ngModel)]="searchText" matInput />
+    </mat-form-field>
+    <button matTooltip="Ara" (click)="searchTask()" mat-stroked-button color="primary">
+      Ara
+    </button>
+  </div>
+
+  <mat-tab-group animationDuration="300ms" (selectedTabChange)="onToggleChange()" [(selectedIndex)]="toggleIndex"
+    mat-align-tabs="center">
+
     <mat-tab label="günlük">
-      <div class="task-container" *ngFor="let task of tasks">
-        <app-task (switchComplete)="switchComplete($event)" (deleteTask)="deleteTask($event)" *ngIf="!task.done" [task]="task"></app-task>
-      </div>
-    </mat-tab>
-    <mat-tab label="haftalık">
+      <div class="mat-headline" style="margin: 1rem; text-align: center;" *ngIf="!tasks.length">Hiç görev yok...</div>
       <div *ngFor="let task of tasks">
-        <app-task (switchComplete)="switchComplete($event)" (deleteTask)="deleteTask($event)" *ngIf="!task.done" [task]="task"></app-task>
+        <app-task (switchComplete)="switchComplete($event)" (deleteTask)="deleteTask($event)"
+          [task]="task"></app-task>
       </div>
     </mat-tab>
+
+    <mat-tab label="haftalık">
+      <div class="mat-headline" style="margin: 1rem; text-align: center;" *ngIf="!tasks.length">Hiç görev yok...</div>
+      <div *ngFor="let task of tasks">
+        <app-task (switchComplete)="switchComplete($event)" (deleteTask)="deleteTask($event)"
+          [task]="task"></app-task>
+      </div>
+    </mat-tab>
+
     <mat-tab label="aylık">
-      <div class="task-container" *ngFor="let task of tasks">
-        <app-task (switchComplete)="switchComplete($event)" (deleteTask)="deleteTask($event)" *ngIf=" !task.done" [task]="task"></app-task>
+      <div class="mat-headline" style="margin: 1rem; text-align: center;" *ngIf="!tasks.length">Hiç görev yok...</div>
+      <div *ngFor="let task of tasks">
+        <app-task (switchComplete)="switchComplete($event)" (deleteTask)="deleteTask($event)"
+          [task]="task"></app-task>
       </div>
     </mat-tab>
+
     <mat-tab label="tamamlananlar">
-      <div class="task-container" *ngFor="let task of tasks">
-        <app-task (switchComplete)="switchComplete($event)" (deleteTask)="deleteTask($event)" *ngIf="task.done" [task]="task"></app-task>
+      <div class="mat-headline" style="margin: 1rem; text-align: center;" *ngIf="!tasks.length">Hiç görev yok...</div>
+      <div *ngFor="let task of tasks">
+        <app-task (switchComplete)="switchComplete($event)" (deleteTask)="deleteTask($event)" 
+          [task]="task"></app-task>
       </div>
     </mat-tab>
+
   </mat-tab-group>
 </div>
+
 <a routerLink="/ekle" class="add-task-btn" mat-mini-fab color="primary" matTooltip="Görev Ekle"
   matTooltipPosition="before">
   <mat-icon>add</mat-icon>
