Tüm görevleri tek seferde görebilmek için bir Hızlı Görünüm sayfası eklendi.

--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -52,3 +52,7 @@
   matTooltipPosition="before">
   <mat-icon>add</mat-icon>
 </a>
+<a routerLink="/hizli" class="quick-view-btn" mat-mini-fab color="primary" matTooltip="Hızlı Görünüm"
+  matTooltipPosition="before">
+  <mat-icon>line_style</mat-icon>
+</a>
