--- a/src/app/components/tasks/tasks.component.css
+++ b/src/app/components/tasks/tasks.component.css
@@ -5,6 +5,13 @@
   z-index: 2;
 }
 
+.quick-view-btn{
+  position: fixed;
+  bottom: 20px;
+  right: 70px;
+  z-index: 2;
+}
+
 .search-task{
   margin: 0 auto;
   display: flex;
