--- a/src/app/components/task/task.component.html
+++ b/src/app/components/task/task.component.html
@@ -15,6 +15,9 @@
     </mat-icon>
   </mat-card-content>
   <mat-action-row>
+    <button *ngIf="!task.done" (click)="navigateEdit(task.id)" mat-icon-button matTooltip="Düzenle">
+      <mat-icon>edit</mat-icon>
+    </button>
     <button [matTooltip]="task.done ? 'Geri Al' : 'Tamamla'" (click)="handleComplete(task)" mat-icon-button>
       <mat-icon>{{task.done ? 'replay' : 'check_circle_outline'}}</mat-icon>
     </button>
