--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -10,7 +10,7 @@
     </button>
   </div>
 
-  <mat-tab-group animationDuration="300ms" (selectedTabChange)="onToggleChange()" [(selectedIndex)]="toggleIndex"
+  <mat-tab-group animationDuration="300ms" (selectedTabChange)="onTabChange()" [(selectedIndex)]="toggleIndex"
     mat-align-tabs="center">
 
     <mat-tab label="günlük">
