Geçmiş aktiviteler ekranı eklendi, gün, hafta, ay şeklinde kategorize edilecek.

--- a/src/app/components/quick-view/quick-view.component.html
+++ b/src/app/components/quick-view/quick-view.component.html
@@ -19,5 +19,5 @@
 </div>
 <a routerLink="/" class="back-btn" mat-mini-fab color="primary" matTooltip="Geri Dön"
   matTooltipPosition="before">
-  <mat-icon>replay</mat-icon>
+  <mat-icon>arrow_back</mat-icon>
 </a>
