--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -56,3 +56,7 @@
   matTooltipPosition="before">
   <mat-icon>line_style</mat-icon>
 </a>
+<a routerLink="/aktiviteler" class="activities-btn" mat-mini-fab color="primary" matTooltip="Aktiviteler"
+  matTooltipPosition="before">
+  <mat-icon>history</mat-icon>
+</a>
