aktiviteler artık bugün, son 7 gün ve son 30 gün şeklinde ayrı olarak listeleniyor.

--- a/src/app/components/activities/activities.component.css
+++ b/src/app/components/activities/activities.component.css
@@ -4,3 +4,10 @@
   right: 20px;
   z-index: 2;
 }
+
+@media(min-width: 700px) {
+  .activity-list-wrapper{
+    width: 80%;
+    margin: 0 auto;
+  }
+}
