Hızlı notlar ekranı eklendi. Bu ekranda deadline, saat, önem gibi detayları girmenize gerek olmayan; hemen yapıp bitirmeniz gereken küçük görevleri ekleyip tamamlayabilirsiniz.

--- a/src/app/components/nav-buttons/nav-buttons.component.html
+++ b/src/app/components/nav-buttons/nav-buttons.component.html
@@ -1,4 +1,7 @@
 <div class="nav-buttons">
+  <a routerLink="/hizli-notlar" mat-mini-fab color="primary" matTooltip="Hızlı Notlar" matTooltipPosition="above">
+    <mat-icon>notes</mat-icon>
+  </a>
   <a routerLink="/hedefler" mat-mini-fab color="primary" matTooltip="Hedefler" matTooltipPosition="above">
     <mat-icon>flag</mat-icon>
   </a>
