--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -5,7 +5,7 @@
       <mat-label>Görev arayın</mat-label>
       <input [(ngModel)]="searchText" matInput />
     </mat-form-field>
-    <button matTooltip="Ara" (click)="searchTask()" mat-stroked-button color="primary">
+    <button matTooltip="Ara" matTooltipPosition="after" (click)="searchTask()" mat-stroked-button color="primary">
       Ara
     </button>
   </div>
