--- a/src/app/components/nav-buttons/nav-buttons.component.css
+++ b/src/app/components/nav-buttons/nav-buttons.component.css
@@ -6,5 +6,10 @@
 }
 
 a{
-  margin-left: 0.5rem;
+  margin-left: 0.6rem;
+  transition: all linear 0.1s;
+}
+
+.nav-buttons a:hover{
+  transform: translateY(-0.5rem) scale(1.20);
 }
