Yanlis girilen routelar için Sayfa Bulunamadi sayfasi eklendi.Sayfa geçis animasyonunda ufak bir değişiklik yapıldı.

--- a/src/app/components/nav-buttons/nav-buttons.component.html
+++ b/src/app/components/nav-buttons/nav-buttons.component.html
@@ -14,7 +14,7 @@
   <a routerLink="/ekle" mat-mini-fab color="primary" matTooltip="Görev Ekle" matTooltipPosition="above">
     <mat-icon>add</mat-icon>
   </a>
-  <a routerLink="/" mat-mini-fab color="primary" matTooltip="Ana Sayfa" matTooltipPosition="above">
+  <a routerLink="/ana-sayfa" mat-mini-fab color="primary" matTooltip="Ana Sayfa" matTooltipPosition="above">
     <mat-icon>home</mat-icon>
   </a>
 </div>
